fix: resolve null countdown reference crash in AdminGUIListener
- Add getCountdown() getter to GameManager
- Remove local null countdown field from AdminGUIListener
- Prevents NPE when admin clicks reset countdown button